# invention

./: .INSTALL.sh.swp  .README.swp  .gitignore  .gitmodules  .redirect_usb.sh.swp  .~lock.calcul_poids.ods#  .~lock.calculs.ods#  1234.FCStd  1351.FCStd  1351.FCStd1  1352.FCStd  1352.FCStd1  1353.FCStd1  1355.FCStd  1355.FCStd1  1615.FCStd  1615.FCStd1  3dprinter.readme  CMakeLists.txt  CTestTestfile.cmake  Configuration.h  INSTALL.sh  INSTRUCTIONS  LICENSE  README  RULES  Stepper Motor 5mm Shaft NEMA 17.FCStd1  THREAD.FCStd  THREAD.FCStd1  TODO  TROUBLESHOOTING  aaaaaa.FCStd  backup_db.sh  base.FCStd  base.FCStd1  base01.FCStd  base01.FCStd1  base_v2.FCStd  base_v2.FCStd1  batterie_AAA_holder.FCStd  (+470 more)
3d/: Fixed_j.FCStd  Fixed_j_01.FCStd  Stepper Motor 5mm Shaft NEMA 17.FCStd  axe_alpha_003.FCStd  axe_alpha_006.FCStd  axe_alpha_009.FCStd  axe_alpha_011.FCStd  axe_grippe_002.FCStd  axe_grippe_003.FCStd  axe_grippe_008.FCStd  axe_grippe_009.FCStd  axe_grippe_011.FCStd  axe_grippe_014.FCStd  axe_grippe_015.FCStd  axe_horizontal_020.stl  cable_track_link_v2_03.FCStd  cable_track_link_v2_04.FCStd  cable_track_link_v2_06.FCStd  cable_track_link_v3_02.FCStd  mot_rot.FCStd  mot_rot_001.FCStd  mot_rot_004.FCStd  pince.FCStd  pince_001.FCStd  pince_002.FCStd  pince_005.FCStd  pince_007.FCStd  pince_008.FCStd  pince_01.FCStd  pince_glisse.FCStd  pince_glisse_001.FCStd  pince_haut_bas_002.FCStd  pince_haut_bas_002.stl  pince_haut_bas_003.stl  pince_haut_bas_004.FCStd  pince_haut_bas_005.FCStd  pince_haut_bas_005.stl  pince_rail.FCStd  poice_haut_bas_003.FCStd  pointe.FCStd  (+49 more)
Cable_track/: link.FCStd  link.FCStd1  link.STEP  link2.STL  linktrack.FCStd1  linktrack_plus_court.FCStd1
archive/: camera_client.sh  copy_data.sh  index.html  position.m
arduino/: arduino_mount_spacer.FCStd  arduino_mount_spacer.FCStd1  mount_round_spacer.FCStd  mount_round_spacer.FCStd1  spacer.stl
autres/: head_tracking.FCStd  rice_cooker_plug.FCStd  rice_cooker_plug.FCStd1
center_finder/: batterie_AAA.FCStd  batterie_AAA.FCStd1  batterie_AAA_holder_v2.FCStd1  center_finder_3_8.FCStd  center_finder_3_8.FCStd1  chuck.FCStd  chuck.FCStd1  drill_bit.FCStd1  laser_centering_cover.FCStd1  laser_pointer_holder.FCStd  laser_tip.FCStd1  press_drill_laser_centering.FCStd  press_drill_laser_centering_with_battery_holders.FCStd1  press_drill_laser_holder.FCStd1  press_drill_laser_holder_001.FCStd
ciseau/: ciseauv2.FCStd1  double_ciseau.FCStd1
client/: Gemfile  INSTALL.sh  package.json  stop.sh
corbeille/: 1234.FCStd1  1351.FCStd1  1353.FCStd  1354.FCStd  1653254.FCStd  1653254.FCStd1  attache.FCStd  attache.FCStd1  bracket_poulie.FCStd  bracket_poulie.FCStd1  bracket_vrai_poulie.FCStd1  bushing_lineaire.FCStd  bushing_lineaire.FCStd1  chariot_01.FCStd1  chariot_bushing.FCStd  chariot_bushing.FCStd1  chariot_transversale.FCStd  chariot_transversale_01.FCStd1  chariot_transversale_02.FCStd  chariot_transversale_03.FCStd  chariot_transversale_04.FCStd  chariot_transversale_05.FCStd  chariot_transversale_05.FCStd1  lin_mot.FCStd  lin_mot.FCStd1  lin_mot_04.FCStd  lin_mot_05.FCStd  lin_mot_07.FCStd1  lin_mot_08.FCStd  pot.FCStd1  poulie02.FCStd  poulie06.FCStd  poulie06.FCStd1  poulie06_L.FCStd1  poulie06_R.FCStd1  poulie07_L.FCStd  poulie07_L.FCStd1  poulie07_R.FCStd  poulie07_R.FCStd1  poulie08.FCStd  (+3 more)
data/: .~lock.density_DB_v2_0_final-1__1_.xlsx#  backup.db  density_DB_v2_0_final-1__1_.xlsx  test.db  unit_tests.db
electric/: #axe_h.sch#  axe_v.sch  breadboard.sch  breadboard.sch~  fixed.sch  photo_resistor.sch  photo_resistor.sch~
ext/: 3_8_in_by_3_ft_threaded_rod.FCStd  3_8_in_by_3_ft_threaded_rod.FCStd1
frontend/: index.html  index.js  inventaire.html  layout.html  manuel.html  new_recipee.html  style.css  visuel.html
hardware/: 93395A201_TYPE 316 SS FLAT-HEAD SOCKET CAP SCREW.STEP  HN-1_4-20.FCStd  HN-1_4-20.FCStd1  M3X0.5-8mm.FCStd  M3X0.5-8mm.FCStd1  M4X0.7-8mm.FCStd1  bracketEbenisterie.FCStd1  bushing.FCStd1  cable_clamp_5-8_in.FCStd  cable_clamp_5-8_in.FCStd1  contrepoids_005.FCStd1  load_cell.FCStd  retaining_ring_0_dot_5_in.FCStd1  threaded_rod_1_4_in.FCStd1  threaded_rod_1_4_in_by_2_in.FCStd1
lathe/: 001.FCStd1  002.FCStd1  003.FCStd1  carriage.FCStd1  carriage_01.FCStd  carriage_01.FCStd1  lathe.FCStd  lathe.FCStd1
machine/: FIXED.FCStd  FIXED_01.FCStd  FIXED_02.FCStd  FIXED_03.FCStd  FIXED_04.FCStd  FIXED_05.FCStd  Fixed.FCStd  Fixed_a.FCStd  Fixed_a_01.FCStd  Fixed_a_02.FCStd  Fixed_a_a_01.FCStd  Fixed_b.FCStd  Fixed_b_01.FCStd  Fixed_c.FCStd  Fixed_c_01.FCStd  Fixed_c_02.FCStd  Fixed_c_03.FCStd  Fixed_c_04.FCStd  Fixed_c_05.FCStd  Fixed_c_06.FCStd  Fixed_d.FCStd  Fixed_d_01.FCStd  Fixed_e.FCStd  Fixed_e_01.FCStd  Fixed_e_02.FCStd  Fixed_e_03.FCStd  Fixed_f.FCStd  Fixed_f_01.FCStd  Fixed_f_02.FCStd  Fixed_g.FCStd  Fixed_g_01.FCStd  Fixed_g_02.FCStd  Fixed_h.FCStd  Fixed_h_01.FCStd  Fixed_h_02.FCStd  Fixed_h_03.FCStd  Fixed_h_04.FCStd  Fixed_h_05.FCStd  Fixed_h_06.FCStd  Fixed_h_07.FCStd  (+799 more)
macros/: FourHoles.FCMacro  FourHolesV2.FCMacro  THREAD.FCMacro  square_tubing_v2.FCMacro  square_tubing_v4.FCMacro
module/: basket.FCStd  fille_03.FCStd  filler.FCStd  filler_01.FCStd  filler_02.FCStd  filler_03.FCStd  filler_04.FCStd  filler_05.FCStd  filler_06.FCStd  filler_07.FCStd  filler_08.FCStd  filler_09.FCStd  filler_10.FCStd  filler_11.FCStd  filler_12.FCStd  filler_13.FCStd  filler_14.FCStd  filler_15.FCStd  filler_16.FCStd  filler_m1.FCStd  frame.FCStd  frame_01.FCStd  frame_02.FCStd  frame_03.FCStd  frame_04.FCStd  frame_05.FCStd  frame_06.FCStd  mixer.FCStd  mixer_01.FCStd  mixer_02.FCStd  (+13 more)
src/vision/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common.h  detect_chessboard.cpp  hr_code.hpp  main.cpp  stickers.html  sweep.cpp
vision/: CMakeCache.txt  CMakeLists.txt  DetectChessboard  Makefile  ScanQRCode  capture.cpp  common.h  detect_chessboard.cpp  encode.sh  gs.example  hr_code.hpp  main.cpp  scan_qr_code.cpp  stickers.html  sweep.cpp  test_captures.cpp  write_font_sticker.cpp
vision/fonts/: test.html
vision/hr_code/: hr_code.hpp
vision/tessdata/configs/: chars
(+645 files in other folders)
