cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable( detect_chessboard detect_chessboard.cpp )
target_link_libraries( detect_chessboard ${OpenCV_LIBS} )
add_executable( scan_qr_code scan_qr_code.cpp )
target_link_libraries( scan_qr_code ${OpenCV_LIBS} ${ZBAR_LIBRARIES}zbar )
add_executable( capture capture.cpp )
target_link_libraries( capture ${OpenCV_LIBS} ${ZBAR_LIBRARIES}zbar )
#add_executable( write_font_sticker write_font_sticker.cpp )
#target_link_libraries( write_font_sticker ${OpenCV_LIBS} ${ZBAR_LIBRARIES}zbar )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} ${ZBAR_LIBRARIES}zbar )
